Fire event on Mac when PRESSED state changes

On Mac, toggle buttons are subclasses of checkboxes, so we can
handle them the same as when a checkbox changes.

This is a great use of the new attribute chance callback infrastructure.

BUG=709572,699438

Review-Url: https://codereview.chromium.org/2811713006
Cr-Commit-Position: refs/heads/master@{#463647}

Former-commit-id: dd5b263792257e226f31136b15af0341673811d5