content/browser/accessibility/browser_accessibility_manager_mac.h
@@ -49,6 +49,10 @@ class CONTENT_EXPORT BrowserAccessibilityManagerMac
   void OnNodeDataWillChange(ui::AXTree* tree,
                             const ui::AXNodeData& old_node_data,
                             const ui::AXNodeData& new_node_data) override;
+  void OnStateChanged(ui::AXTree* tree,
+                      ui::AXNode* node,
+                      ui::AXState state,
+                      bool new_value) override;
 
   // Returns an autoreleased object.
   NSDictionary* GetUserInfoForSelectedTextChangedNotification();
