content/browser/accessibility/browser_accessibility_manager_mac.mm
@@ -405,6 +405,18 @@ void BrowserAccessibilityManagerMac::OnNodeDataWillChange(
   }
 }
 
+void BrowserAccessibilityManagerMac::OnStateChanged(ui::AXTree* tree,
+                                                    ui::AXNode* ax_node,
+                                                    ui::AXState state,
+                                                    bool new_value) {
+  if (state != ui::AX_STATE_PRESSED)
+    return;
+
+  BrowserAccessibility* node = GetFromID(ax_node->id());
+  NotifyAccessibilityEvent(BrowserAccessibilityEvent::FromTreeChange,
+                           ui::AX_EVENT_CHECKED_STATE_CHANGED, node);
+}
+
 NSDictionary* BrowserAccessibilityManagerMac::
     GetUserInfoForSelectedTextChangedNotification() {
   NSMutableDictionary* user_info = [[[NSMutableDictionary alloc] init]
